--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "save": "git add . && git commit -m '.' && git push origin master"
+    "save": "git add . && git commit -m '.' && git push origin master",
+    "start": "git pull"
   },
   "repository": {
     "type": "git",
